<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nameCityField"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/backgroundmap"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="-100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/upPanelOptional"
                style="@style/upPanel">

                <TextView
                    android:id="@+id/chanceOfRain"
                    android:text="@string/chanceOfRain"
                    android:drawableStart="@drawable/rain"
                    style="@style/upPanelTextView" />

                <TextView
                    android:id="@+id/speedWind"
                    android:text="@string/windSpeed"
                    android:drawableStart="@drawable/ic_wind"
                    style="@style/upPanelTextView"/>

                <TextView
                    android:id="@+id/humidity"
                    android:text="@string/humidity"
                    android:drawableStart="@drawable/humidity"
                    style="@style/upPanelTextView"/>
            </LinearLayout>

            <TextView
                android:id="@+id/currentCity"
                android:text="@string/currentCity"
                style="@style/currentCityTextView"/>

            <TextView
                android:id="@+id/statusWeather"
                android:text="@string/statusWeather"
                style="@style/statusWeatherTextView"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/valueWeather"
                    android:text="@string/celsiusWeather"
                    style="@style/valueWeatherTextView"/>

                <LinearLayout
                    style="@style/containerWeatherLinearLayout">

                    <TextView
                        android:id="@+id/unitWeather"
                        android:text="@string/unitWeatherCelsius"
                        style="@style/unitWeatherTextView"/>

                    <TextView
                        android:id="@+id/upperLineWeatherToday"
                        android:text="@string/upperLineWeatherToday"
                        style="@style/lineWeatherTodayTextView"/>

                    <TextView
                        android:id="@+id/bottomLineWeatherToday"
                        android:text="@string/bottomLineWeatherToday"
                        style="@style/lineWeatherTodayTextView"/>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:src="@drawable/ic_brightness_5_black_24dp"
                android:contentDescription="@string/statusWeatherImage"
                style="@style/statusWeatherImageView"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSetup"
        android:background="@drawable/ic_reorder_black_24dp"
        style="@style/setupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>