<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_setup"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/switchSetup"
                style="@style/switchSetupLinear">
                <Switch
                    android:id="@+id/switchChanceOfRain"
                    style="@style/switchesSetup"
                    android:text="@string/chance_of_rain" />
                <Switch
                    android:id="@+id/switchWind"
                    style="@style/switchesSetup"
                    android:text="@string/wind" />
                <Switch
                    android:id="@+id/switchHumidity"
                    style="@style/switchesSetup"
                    android:text="@string/SwitchHumidity" />
            </LinearLayout>

            <EditText
                android:id="@+id/changeCity"
                style="@style/changeCityEditText"
                tools:targetApi="o"
                android:autofillHints="@string/helpInputCity" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/okMenu"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#38A500"
                    android:textStyle="bold"
                    android:text="@string/ok"
                     />
                <Button
                    android:id="@+id/cancelMenu"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#FF0000"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>